# cellpilot

./: .clasp.json  .claspignore  .codebase-digest.json  .gitignore  AdvancedRestructuringTemplate.html  AutomationTemplate.html  BETA_INSTALLATION_SUMMARY.md  BETA_INSTALLER.gs  BETA_INSTALLER_WEB_APP.txt  BETA_LAUNCH_CHECKLIST.md  BETA_READINESS_CHECKLIST.md  CELLM8_INTEGRATION_SUMMARY.md  ConditionalFormattingWizardTemplate.html  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DataPipelineTemplate.html  DataValidationGeneratorTemplate.html  DuplicateRemovalTemplate.html  EnhancedDashboard.html  FormulaBuilderTemplate.html  HOW_TO_USE_NEW_SETUP.md  HelpFeedbackTemplate.html  INSTALLATION.md  IndustryTemplatesTemplate.html  LOGO_SETUP.md  MARKETPLACE_ACTION_PLAN.md  MARKETPLACE_REQUIREMENTS.md  MASTER_DOCUMENTATION.md  MLEngine.html  MLEngineLoader.html  MultiTabRelationshipMapperTemplate.html  README.md  SUPABASE_CLI_GUIDE.md  SettingsTemplate.html  SharedStyles.html  SmartFormulaAssistantTemplate.html  SmartFormulaDebuggerTemplate.html  TESTING.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  (+9 more)
.claude/: PROJECT_CONTEXT.md  PROMPT_TEMPLATE.md  claude.md
apps-script/: .prettierrc  README.md  eslint.config.js  package-lock.json  package.json
beta-installer/: .clasp.json  Code.gs  installer.html
docs/: CLEANUP_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  WORKFLOW_SUMMARY.md
html/: DuplicateRemovalTemplate.html  FormulaBuilderTemplate.html  SharedStyles.html
scripts/: check-sync.sh  dev.sh  status.sh  use-node-20.sh
site/: .env.local.example  (+7 more)
(+156 files in other folders)
